[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/DelaGothicOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Main/Hire_mercs.gd" type="Script" id=2]
[ext_resource path="res://Assets/SoundFX/beltHandle2.ogg" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="Mercs" type="HBoxContainer"]
margin_right = 560.0
margin_bottom = 20.0
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Merc_name" type="Label" parent="."]
margin_right = 123.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Archers"

[node name="Fighting_power_amnt" type="Label" parent="."]
margin_left = 127.0
margin_right = 156.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "50"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fighting_pwr_lbl" type="Label" parent="."]
margin_left = 160.0
margin_right = 304.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = " fighting power!"

[node name="Cost_lbl" type="Label" parent="."]
margin_left = 308.0
margin_right = 432.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Cost"

[node name="Cost" type="Label" parent="Cost_lbl"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -12.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "50"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hire" type="Button" parent="."]
margin_left = 436.0
margin_right = 560.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Hire"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
[connection signal="pressed" from="Hire" to="." method="_on_Hire_pressed"]
